increase /dev/shm

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ services:
       - ./config:/config
       - ./videos:/opt/shinobi/videos
       - ./datadir:/var/lib/mysql
+      - /dev/shm/shinobiDockerTemp:/dev/shm/streams
     ports:
       - "8080:8080"
